--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "rxjs": "~7.4.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^7.1.2",
+    "ngx-toastr": "^14.2.1",
+    "rxjs": "~7.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
