--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,6 @@
   },
   "private": true,
   "dependencies": {
-    "-": "0.0.1",
     "@angular/animations": "~13.0.0",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
@@ -19,16 +18,11 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.3",
-    "datetime": "0.0.3",
     "font-awesome": "^4.7.0",
-    "ngx": "^2.4.0",
     "ngx-bootstrap": "^7.1.2",
-    "ngx-bootstrap-datetime-popup": "^7.0.2",
     "ngx-toastr": "^14.2.1",
-    "popup": "0.0.3",
-    "rxjs": "~7.4.0",
+    "rxjs": "^7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
