--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.0.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^7.1.2",
     "ngx-toastr": "^14.2.1",
     "rxjs": "^7.4.0",
