--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^7.1.2",
+    "ngx-spinner": "^13.0.0",
     "ngx-toastr": "^14.2.1",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.0",
