--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "font-awesome": "^4.7.0",
